# UniaOperatingSystem

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  boot_unia_qemu.sh  boot_unia_qemu_final.sh  boot_unia_qemu_fixed.sh  boot_unia_qemu_nightly.sh  boot_unia_qemu_v2.sh  build.sh  build_gaming.sh  run_gaming_os.sh  run_unia_os.sh  run_unia_qemu_display.sh  run_web_simulation.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  backend-deploy.yml  freebsd-ci.yml  freebsd-deploy.yml  web-ci.yml  web-deploy.yml
assets/: README.md
aws-testing/: README.md  connect-cpu-instance.sh  connect-gpu-instance.sh  connect-memory-instance.sh  connect-network-instance.sh  deploy-test-infrastructure.sh  infrastructure.tf  tfplan  tfplan-v2
aws-testing/scripts/: setup-cpu-instance.sh  setup-gpu-instance.sh  setup-memory-instance.sh  setup-network-instance.sh
aws-testing/test-automation/: run-all-tests.sh
docs/: AWS-TESTING-RESULTS.md  REQUIREMENTS-AND-NEXT-STEPS.md  architecture-compatibility.md  bootable-experience-guide.md  bootable-experience.md  console-experience.md  getting_started.md  integration_guide.md  qemu-boot-guide.md  running-unia-os.md  web-simulation-guide.md
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
documentation/ai-framework/: README.md
documentation/architecture/: README.md
examples/advanced_ai_game/: README.md
examples/advanced_ai_game/src/: gameplay.rs
examples/simple_ai_game/: Cargo.toml  README.md  main.rs
examples/simple_ai_game/src/: inventory.rs  main.rs  npc.rs  player.rs  world.rs
gaming-kernel/: Cargo.toml
gaming-kernel/.cargo/: config.toml
gaming-kernel/src/: input.rs  lib.rs  main.rs  physics.rs  render.rs  sound.rs  vr.rs
gaming-kernel/src/ai/: mod.rs
gaming-kernel/src/game_engine/: mod.rs
gaming-kernel/src/gpu/: mod.rs
gaming-kernel/src/neural/: mod.rs
infrastructure/aws/cloudformation/: analytics.yml  cdn.yml  database.yml  ecs.yml  monitoring.yml  networking.yml  security.yml  storage.yml
infrastructure/aws/terraform/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/docker/: .dockerignore  analytics.dockerfile  backend.dockerfile  docker-compose.yml  web.dockerfile
infrastructure/kubernetes/: kustomization.yml  namespace.yml
infrastructure/kubernetes/analytics/: deployment.yml  service.yml
infrastructure/kubernetes/backend/: deployment.yml  service.yml
infrastructure/kubernetes/database/: service.yml  statefulset.yml
infrastructure/kubernetes/monitoring/: grafana.yml  prometheus.yml
infrastructure/kubernetes/networking/: ingress.yml
infrastructure/kubernetes/security/: rbac.yml
infrastructure/kubernetes/storage/: persistent-volume.yml
infrastructure/kubernetes/web/: deployment.yml  service.yml
infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml  rules.yml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs
kernel/src/graphics/: mod.rs
kernel/src/memory/: mod.rs
kernel/src/net/: mod.rs
kernel/src/security/: mod.rs
kernel/src/task/: mod.rs
src/: error.rs
src/ai_core/: Cargo.toml
src/ai_core/src/: config.rs  error.rs  lib.rs
src/ai_core/src/game_ai/: behavior.rs  mod.rs  npc.rs  player.rs  procedural.rs
src/ai_core/src/game_ai/npc/: behavior_tree.rs
src/ai_core/src/game_ai/procedural/: terrain_generator.rs
src/ai_core/src/hardware_acceleration/: cpu.rs  mod.rs
src/ai_core/src/inference/: backend.rs  mod.rs  tensor.rs
src/ai_core/src/ml/: player_model.rs
src/ai_core/src/os_integration/: freebsd.rs
src/backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/boot/: Cargo.toml  README.md  boot_interactive.sh  boot_sequence_fixed.rs  build.sh  build_and_run.sh  build_and_run_with_console.sh  build_cross.sh  build_cross_clean.sh  build_cross_final.sh  build_cross_fixed.sh  build_cross_fixed_v2.sh  build_cross_fixed_v3.sh  build_cross_fixed_v4.sh  build_cross_fixed_v5.sh  build_cross_nightly.sh  build_cross_simple.sh  build_minimal.sh  build_minimal_space.sh  build_standalone.sh  build_x86_64.sh  check_success.sh  clean_rebuild.sh  main_fixed.rs  x86_64-unia.json
src/boot/.cargo/: config.toml
src/boot/config/: boot_config.toml
src/boot/src/: ai.rs  allocator.rs  boot_sequence.rs  debug.rs  game.rs  gdt.rs  interrupts.rs  lib.rs  lib_clean.rs  lib_standalone.rs  main.rs  main_final.rs  main_minimal.rs  main_simple.rs  main_standalone.rs  memory.rs  memory_init.rs  network.rs  serial.rs  vga_buffer.rs
src/boot/src/ai/: mod.rs
src/boot/src/console/: mod.rs
src/boot/src/game/: mod.rs
src/boot/src/network/: mod.rs
src/boot/src/task/: executor.rs  keyboard.rs  mod.rs
src/boot/src/ui/: dashboard.rs  mod.rs  theme.rs
src/boot/src/ui/components/: button.rs  card.rs  chart.rs  header.rs  mod.rs  sidebar.rs
src/boot/web/: index.html
src/freebsd/: INSTALL.md  LICENSE  Makefile  README.md
src/freebsd/boot/: boot0.S  boot1.S  device.hints  loader.conf  loader.rc
src/freebsd/config/: gpu.conf  lidar.conf  network.conf  security.conf  system.conf
src/freebsd/kernel/: Makefile  ai_integration.c  ai_integration.h  gpu_driver.c  gpu_driver.h  lidar_driver.c  lidar_driver.h  memory_protection.c  (+9 more)
src/graphics/: vulkan_integration.rs
src/kernel/: power_management.c  power_management.h
src/networking/: api_bridge.rs  mesh_network.rs  nat_traversal.rs
src/web/: .dockerignore  .env.development  .env.production  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  cypress.config.ts  docker-compose.yml  index.html  jest.config.ts  package.json  postcss.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
testing/cloud_simulation/: README.md  extended_test_plan.md  hardware_simulation_config.yaml  test_results_summary.md  unia_console_simulation_tests.sh
(+324 files in other folders)
