[package]
name = "simple_ai_game"
version = "0.1.0"
edition = "2021"
authors = ["UNIA Team"]
description = "A simple game using UNIA AI Core"

[dependencies]
unia_ai_core = { path = "../../src/ai_core" }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0.71"
clap = "3.2.25"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
ctrlc = "3.2.5"

[[bin]]
name = "simple_ai_game"
path = "main.rs"
