[package]
name = "simple_ai_game"
version = "0.1.0"
edition = "2021"
description = "Simple AI game example for UNIA Operating System"

[dependencies]
unia_core = { path = "../../src/core" }
unia_ai = { path = "../../src/ai_core" }
unia_graphics = { path = "../../src/graphics" }
noise = "0.8.2"
rand = "0.8.5"

[build-dependencies]
cmake = "0.1.50"
