[package]
name = "unia_ai_core"
version = "0.1.0"
edition = "2021"
authors = ["UNIA Contributors"]
description = "Core AI framework for the UNIA Operating System"
license = "MIT"
repository = "https://github.com/Ultrabrainai/UniaOperatingSystem"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# AI and ML dependencies
tch = "0.13.0"  # PyTorch bindings for Rust
ndarray = "0.15.6"
ort = { version = "1.14.7", features = ["load-dynamic"] }  # ONNX Runtime
tract-onnx = "0.19.11"  # Pure Rust ONNX implementation

# Concurrency and performance
rayon = "1.7.0"
crossbeam = "0.8.2"
parking_lot = "0.12.1"

# Networking
tonic = "0.9.2"
prost = "0.11.9"
tokio-stream = "0.1.14"

# Storage
sled = "0.34.7"

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.8.5"
dashmap = "5.4.0"

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.11.4"
test-case = "3.1.0"
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = "0.9.2"

[features]
default = ["cuda"]
cuda = ["tch/cuda"]
cpu-only = []
tensorrt = []
distributed = []
telemetry = []

[[bench]]
name = "inference_benchmarks"
harness = false

[lib]
name = "unia_ai_core"
path = "src/lib.rs"

[[bin]]
name = "unia_ai_service"
path = "src/bin/service.rs"
