[package]
name = "unia-os-bootable"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
x86_64 = "0.14.10"

[profile.dev]
panic = "abort"
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1
